ColorPicker: fix popup z-index

--- a/teamapps-client/less/formfield/UiColorPicker.less
+++ b/teamapps-client/less/formfield/UiColorPicker.less
@@ -29,10 +29,11 @@
       border-style: solid;
     }
 
-    .pcr-app {
-      z-index: 1;
-    }
   }
 
+}
+
+.pcr-app {
+  z-index: 10000;
 }
 
